# treerite

./: .gitmodules  Cargo.toml  Justfile  README.md  all.html  build.rs  crates.js  fn.treelite_register_log_callback.html  search-index.js  settings.html  source-files.js  trait.FloatInfo.html
benches/: simple_bench.rs
examples/: example.rs  iris.rs
fehler/: all.html  attr.throws.html  index.html  macro.throw.html  sidebar-items.js
fehler_macros/: all.html  attr.throws.html  index.html
libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ACCOUNTING.html  constant.ADDR_COMPAT_LAYOUT.html  constant.ADDR_LIMIT_32BIT.html  constant.ADDR_LIMIT_3GB.html  constant.ADDR_NO_RANDOMIZE.html  constant.ADFS_SUPER_MAGIC.html  constant.ADJ_ESTERROR.html  constant.ADJ_FREQUENCY.html  constant.ADJ_MAXERROR.html  constant.ADJ_MICRO.html  constant.ADJ_NANO.html  constant.ADJ_OFFSET.html  constant.ADJ_OFFSET_SINGLESHOT.html  constant.ADJ_OFFSET_SS_READ.html  constant.ADJ_SETOFFSET.html  constant.ADJ_STATUS.html  constant.ADJ_TAI.html  constant.ADJ_TICK.html  constant.ADJ_TIMECONST.html  constant.AFFS_SUPER_MAGIC.html  (+4092 more)
matrixmultiply/: all.html  fn.dgemm.html  fn.sgemm.html  index.html
ndarray/: all.html  enum.CowRepr.html  enum.ErrorKind.html  enum.FoldWhile.html  enum.SliceOrIndex.html  fn.Dim.html  fn.Ix0.html  fn.Ix1.html  fn.Ix2.html  fn.Ix3.html  fn.Ix4.html  fn.Ix5.html  fn.Ix6.html  fn.IxDyn.html  fn.arr0.html  fn.arr1.html  fn.arr2.html  fn.arr3.html  fn.aview0.html  fn.aview1.html  fn.aview2.html  (+99 more)
(+555 files in other folders)
