[package]
name = "treerite"
version = "0.1.0"
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
edition = "2018"
repository = "https://github.com/dovahcrow/treerite"
readme = "README.md"
license-file = "LICENSE"
description = "Rust binding for treelite runtime (https://github.com/dmlc/treelite)"

[features]
default = [ "static", "free_panic" ]
static = []
dynamic = []
free_panic = []

[dependencies]
fehler = "1"
failure = "0.1"
libc = "0.2"
thiserror = "1"
ndarray = "0.14"
num-traits = "0.2"

[build-dependencies]
cmake = "0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simple_bench"
harness = false