[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
description = "Rust binding for treelite runtime (https://github.com/dmlc/treelite)"
edition = "2018"
license-file = "LICENSE"
name = "treerite"
readme = "README.md"
repository = "https://github.com/dovahcrow/treerite"
version = "0.1.3"

[features]
default = ["static", "free_panic"]
dynamic = []
free_panic = []
static = []

[dependencies]
fehler = "1"
libc = "0.2"
ndarray = "0.14"
num-traits = "0.2"
thiserror = "1"

[build-dependencies]
cmake = "0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "simple_bench"
