[package]
authors = ["Weiyuan Wu <weiyuan@crows.land>"]
description = "Rust binding for treelite runtime (https://github.com/dmlc/treelite)"
edition = "2018"
license-file = "LICENSE"
name = "treerite"
readme = "README.md"
repository = "https://github.com/dovahcrow/treerite"
version = "0.2.0"

[features]
default = ["free_panic"]
free_panic = []

[dependencies]
culpa = "1"
libc = "0.2"
ndarray = "0.16"
num-traits = "0.2"
thiserror = "2"

[build-dependencies]
cmake = "0.1"
bindgen = "0.72"

[dev-dependencies]
criterion = "0.6"

[[bench]]
harness = false
name = "simple_bench"
